monolith-linux-cfn.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Linux variant of Migrating the Monolith workshop stack

Parameters:
  EEKeyPair:
    Type: AWS::EC2::KeyPair::KeyName
    Default: EEKeyPair
    Description: Event Engine Name of the EC2 KeyPair generated for the Team
  LatestAMI:
    Type: AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>
    Default: /aws/service/ami-amazon-linux-latest/al2023-ami-kernel-default-x86_64
    Description: Latest Amazon Linux 2023 AMI

Resources:
  CodeDeployServiceRole897ED2CE:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service:
                Fn::Join:
                  - ''
                  - - codedeploy.
                    - Ref: AWS::Region
                    - .
                    - Ref: AWS::URLSuffix
        Version: '2012-10-17'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSCodeDeployRole
      Path: /

  awscodestarservicerole60377864:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: codestar.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSCodeStarServiceRole
      Path: /service-role/

  awselasticbeanstalkserviceroleD8411EF4:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Condition:
              StringEquals:
                sts:ExternalId: elasticbeanstalk
            Effect: Allow
            Principal:
              Service: elasticbeanstalk.amazonaws.com
        Version: '2012-10-17'
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/service-role/AWSElasticBeanstalkEnhancedHealth
        - arn:aws:iam::aws:policy/service-role/AWSElasticBeanstalkService

  CreateGitCredsRole385E94AC:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Action: sts:AssumeRole
            Effect: Allow
            Principal:
              Service: lambda.amazonaws.com
        Version: '2012-10-17'
      Path: /
      Policies:
        - PolicyName: root
          PolicyDocument:
            Statement:
              - Action:
                  - iam:CreateServiceSpecificCredential
                  - iam:ListServiceSpecificCredentials
                  - iam:DeleteServiceSpecificCredential
                Effect: Allow
                Resource: '*'
              - Action:
                  - logs:CreateLogGroup
                  - logs:CreateLogStream
                  - logs:PutLogEvents
                Effect: Allow
                Resource: arn:aws:logs:*:*:*
            Version: '2012-10-17'

  DevAxNetworkVPC049CF20B:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.20.0.0/16
      EnableDnsHostnames: true
      EnableDnsSupport: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC

  DevAxNetworkVPCpublicSubnet1Subnet18336BFA:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.20.0.0/24
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet1

  DevAxNetworkVPCpublicSubnet1RouteTable397546CD:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet1

  DevAxNetworkVPCpublicSubnet1RouteTableAssociation32F54607:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCpublicSubnet1RouteTable397546CD
      SubnetId:
        Ref: DevAxNetworkVPCpublicSubnet1Subnet18336BFA

  DevAxNetworkVPCpublicSubnet1DefaultRoute088828A0:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCpublicSubnet1RouteTable397546CD
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DevAxNetworkVPCIGW3AED8105
    DependsOn:
      - DevAxNetworkVPCVPCGWBDEEED8F

  DevAxNetworkVPCpublicSubnet1EIP241549E0:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet1

  DevAxNetworkVPCpublicSubnet1NATGateway8B09B209:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - DevAxNetworkVPCpublicSubnet1EIP241549E0
          - AllocationId
      SubnetId:
        Ref: DevAxNetworkVPCpublicSubnet1Subnet18336BFA
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet1

  DevAxNetworkVPCpublicSubnet2Subnet0FE75CE7:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.20.1.0/24
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ''
      MapPublicIpOnLaunch: true
      Tags:
        - Key: aws-cdk:subnet-name
          Value: public
        - Key: aws-cdk:subnet-type
          Value: Public
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet2

  DevAxNetworkVPCpublicSubnet2RouteTable697DCAB0:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet2

  DevAxNetworkVPCpublicSubnet2RouteTableAssociation88AA6DF8:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCpublicSubnet2RouteTable697DCAB0
      SubnetId:
        Ref: DevAxNetworkVPCpublicSubnet2Subnet0FE75CE7

  DevAxNetworkVPCpublicSubnet2DefaultRoute4C133366:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCpublicSubnet2RouteTable697DCAB0
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: DevAxNetworkVPCIGW3AED8105
    DependsOn:
      - DevAxNetworkVPCVPCGWBDEEED8F

  DevAxNetworkVPCpublicSubnet2EIP2C72517D:
    Type: AWS::EC2::EIP
    Properties:
      Domain: vpc
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet2

  DevAxNetworkVPCpublicSubnet2NATGateway63D3A4D0:
    Type: AWS::EC2::NatGateway
    Properties:
      AllocationId:
        Fn::GetAtt:
          - DevAxNetworkVPCpublicSubnet2EIP2C72517D
          - AllocationId
      SubnetId:
        Ref: DevAxNetworkVPCpublicSubnet2Subnet0FE75CE7
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/publicSubnet2

  DevAxNetworkVPCprivateSubnet1SubnetF1C6C29A:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.20.2.0/24
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      AvailabilityZone:
        Fn::Select:
          - 0
          - Fn::GetAZs: ''
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/privateSubnet1

  DevAxNetworkVPCprivateSubnet1RouteTableF757820F:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/privateSubnet1

  DevAxNetworkVPCprivateSubnet1RouteTableAssociation94A46865:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCprivateSubnet1RouteTableF757820F
      SubnetId:
        Ref: DevAxNetworkVPCprivateSubnet1SubnetF1C6C29A

  DevAxNetworkVPCprivateSubnet1DefaultRoute07EFC529:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCprivateSubnet1RouteTableF757820F
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DevAxNetworkVPCpublicSubnet1NATGateway8B09B209

  DevAxNetworkVPCprivateSubnet2SubnetD148A816:
    Type: AWS::EC2::Subnet
    Properties:
      CidrBlock: 10.20.3.0/24
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      AvailabilityZone:
        Fn::Select:
          - 1
          - Fn::GetAZs: ''
      MapPublicIpOnLaunch: false
      Tags:
        - Key: aws-cdk:subnet-name
          Value: private
        - Key: aws-cdk:subnet-type
          Value: Private
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/privateSubnet2

  DevAxNetworkVPCprivateSubnet2RouteTable81AEA059:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC/privateSubnet2

  DevAxNetworkVPCprivateSubnet2RouteTableAssociation973AEB51:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCprivateSubnet2RouteTable81AEA059
      SubnetId:
        Ref: DevAxNetworkVPCprivateSubnet2SubnetD148A816

  DevAxNetworkVPCprivateSubnet2DefaultRouteE9B8CAFD:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId:
        Ref: DevAxNetworkVPCprivateSubnet2RouteTable81AEA059
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: DevAxNetworkVPCpublicSubnet2NATGateway63D3A4D0

  DevAxNetworkVPCIGW3AED8105:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: CdkStack/DevAxNetworkVPC

  DevAxNetworkVPCVPCGWBDEEED8F:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId:
        Ref: DevAxNetworkVPC049CF20B
      InternetGatewayId:
        Ref: DevAxNetworkVPCIGW3AED8105

  DevAxNetworkSGF6BD3961:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: CdkStack/DevAxNetworkSG
      GroupName: DBSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:3306
          FromPort: 3306
          IpProtocol: tcp
          ToPort: 3306
      VpcId:
        Ref: DevAxNetworkVPC049CF20B

  DevAxLinuxSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: CdkStack/DevAxLinuxSecurityGroup
      GroupName: WorkspaceSecurityGroup
      SecurityGroupEgress:
        - CidrIp: 0.0.0.0/0
          Description: Allow all outbound traffic by default
          IpProtocol: '-1'
      SecurityGroupIngress:
        - CidrIp: 0.0.0.0/0
          Description: from 0.0.0.0/0:22
          FromPort: 22
          IpProtocol: tcp
          ToPort: 22
      VpcId:
        Ref: DevAxNetworkVPC049CF20B

  DevAxNetworkSGfromCdkStackDevAxLinuxSecurityGroup3306:
    Type: AWS::EC2::SecurityGroupIngress
    Properties:
      IpProtocol: tcp
      Description: WorkshopHost to DB over mysql
      FromPort: 3306
      GroupId:
        Fn::GetAtt:
          - DevAxNetworkSGF6BD3961
          - GroupId
      SourceSecurityGroupId:
        Fn::GetAtt:
          - DevAxLinuxSecurityGroup
          - GroupId
      ToPort: 3306

  DBinstanceSubnetGroupA78F1F9F:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: Subnet group for DBinstance database
      SubnetIds:
        - Ref: DevAxNetworkVPCprivateSubnet1SubnetF1C6C29A
        - Ref: DevAxNetworkVPCprivateSubnet2SubnetD148A816

  DBinstanceA5CF359B:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceClass: db.t3.micro
      AllocatedStorage: '5'
      AutoMinorVersionUpgrade: false
      BackupRetentionPeriod: 3
      CopyTagsToSnapshot: true
      DBName: travelbuddy
      DBSubnetGroupName:
        Ref: DBinstanceSubnetGroupA78F1F9F
      DeletionProtection: false
      Engine: mysql
      MasterUsername: root
      MasterUserPassword: labpassword
      MultiAZ: false
      Port: '3306'
      PubliclyAccessible: false
      StorageEncrypted: true
      StorageType: gp2
      VPCSecurityGroups:
        - Fn::GetAtt:
            - DevAxNetworkSGF6BD3961
            - GroupId
    UpdateReplacePolicy: Snapshot

  AWSStudent3111CB37:
    Type: AWS::IAM::User
    Properties:
      UserName: awsstudent

  DevAxLinuxHost:
    Type: AWS::EC2::Instance
    DependsOn:
      - DBinstanceA5CF359B
    Properties:
      ImageId:
        Ref: LatestAMI
      InstanceType: m5.xlarge
      KeyName:
        Ref: EEKeyPair
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: '0'
          GroupSet:
            - Fn::GetAtt:
                - DevAxLinuxSecurityGroup
                - GroupId
          SubnetId:
            Ref: DevAxNetworkVPCpublicSubnet1Subnet18336BFA
      SourceDestCheck: true
      Tags:
        - Key: Name
          Value: DevAxLinuxHost
      UserData:
        Fn::Base64:
          Fn::Sub: |
            #!/bin/bash
            set -euxo pipefail

            dnf update -y
            dnf install -y git java-17-amazon-corretto maven mysql awscli python3-pip unzip
            pip3 install --upgrade awsebcli

            cat >/tmp/DB.sql <<'SQL'
            use travelbuddy;

            DROP TABLE IF EXISTS `flightspecial`;
            CREATE TABLE `flightspecial` (
              `id` int(11) unsigned NOT NULL AUTO_INCREMENT,
              `header` varchar(255) NOT NULL DEFAULT '',
              `body` varchar(255) DEFAULT NULL,
              `origin` varchar(255) DEFAULT NULL,
              `originCode` varchar(6) DEFAULT NULL,
              `destination` varchar(255) DEFAULT NULL,
              `destinationCode` varchar(6) DEFAULT NULL,
              `cost` int(11) NOT NULL,
              `expiryDate` bigint(16) NOT NULL,
              PRIMARY KEY (`id`)
            ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8;

            INSERT INTO `flightspecial` (`expiryDate`, `cost`, `header`, `body`, `origin`, `originCode`, `destination`, `destinationCode`) VALUES ((SELECT (UNIX_TIMESTAMP() * 1000)) + 79200 + (RAND() * 20000000),(50 + RAND() * 200),'London to Prague','Jewel of the East','London','LHR','Paris','CDG');
            INSERT INTO `flightspecial` (`expiryDate`, `cost`, `header`, `body`, `origin`, `originCode`, `destination`, `destinationCode`) VALUES ((SELECT (UNIX_TIMESTAMP() * 1000)) + 79200 + (RAND() * 20000000),(50 + RAND() * 500),'New York to London','Trans-Atlantic','Origin','ORG','Destination','DST');

            DROP TABLE IF EXISTS `hotelspecial`;
            CREATE TABLE `hotelspecial` (
              `id` int(11) unsigned NOT NULL AUTO_INCREMENT,
              `hotel` varchar(255) NOT NULL DEFAULT '',
              `description` varchar(255) DEFAULT NULL,
              `location` varchar(255) DEFAULT NULL,
              `cost` int(11) NOT NULL,
              `expiryDate` bigint(16) NOT NULL,
              PRIMARY KEY (`id`)
            ) ENGINE=InnoDB AUTO_INCREMENT=1 DEFAULT CHARSET=utf8;

            INSERT INTO `hotelspecial` (`expiryDate`, `cost`, `hotel`, `description`, `location`) VALUES ((SELECT (UNIX_TIMESTAMP() * 1000)) + 79200 + (RAND() * 20000000),(50 + RAND() * 1000),'Sommerset Hotel','Minimum stay 3 nights','Sydney');
            INSERT INTO `hotelspecial` (`expiryDate`, `cost`, `hotel`, `description`, `location`) VALUES ((SELECT (UNIX_TIMESTAMP() * 1000)) + 79200 + (RAND() * 20000000),(50 + RAND() * 1000),'EasyStay Apartments','Minimum stay one week','Melbourne');
            SQL

            mysql -h ${DBinstanceA5CF359B.Endpoint.Address} -u root -plabpassword < /tmp/DB.sql

  CreateGitCredsFunction9D6697C5:
    Type: AWS::Lambda::Function
    Properties:
      Code:
        ZipFile: |
          import boto3
          import cfnresponse

          def lambda_handler(event, context):
              print(event)
              response = {}
              try:
                  if event['RequestType'] == 'Delete':
                      iam = boto3.client('iam')
                      credentials = iam.list_service_specific_credentials(UserName='awsstudent', ServiceName='codecommit.amazonaws.com')
                      if credentials['ServiceSpecificCredentials']:
                          service_specific_credential_id = credentials['ServiceSpecificCredentials'][0]['ServiceSpecificCredentialId']
                          iam.delete_service_specific_credential(UserName='awsstudent', ServiceSpecificCredentialId=service_specific_credential_id)
                      cfnresponse.send(event, context, cfnresponse.SUCCESS, response)
                  else:
                      iam = boto3.client('iam')
                      gitcreds = iam.create_service_specific_credential(UserName='awsstudent', ServiceName='codecommit.amazonaws.com')
                      response['GitUserName'] = gitcreds['ServiceSpecificCredential']['ServiceUserName']
                      response['GitPassword'] = gitcreds['ServiceSpecificCredential']['ServicePassword']
                      cfnresponse.send(event, context, cfnresponse.SUCCESS, response)
              except Exception as e:
                  print(e)
                  response['Status'] = 'FAILED'
                  response['Reason'] = 'Git failed, see log for details'
                  cfnresponse.send(event, context, cfnresponse.FAILED, response)
      Handler: index.lambda_handler
      Role:
        Fn::GetAtt:
          - CreateGitCredsRole385E94AC
          - Arn
      Runtime: python3.9
      FunctionName: CreateGitCredsFunction
      MemorySize: 128
      Timeout: 90
    DependsOn:
      - CreateGitCredsRole385E94AC

  GitCredsCR:
    Type: AWS::CloudFormation::CustomResource
    Properties:
      ServiceToken:
        Fn::GetAtt:
          - CreateGitCredsFunction9D6697C5
          - Arn
    UpdateReplacePolicy: Delete
    DeletionPolicy: Delete

Outputs:
  GitUserName:
    Description: Git Username
    Value:
      Fn::GetAtt:
        - GitCredsCR
        - GitUserName
  GitPassword:
    Description: Git Password
    Value:
      Fn::GetAtt:
        - GitCredsCR
        - GitPassword
  RDSEndpoint:
    Description: RDS database endpoint
    Value:
      Fn::GetAtt:
        - DBinstanceA5CF359B
        - Endpoint.Address
